# liftoff

./: FLATHUB_SUBMISSION.md  README.md  READY_FOR_FLATHUB.md  build.sh  flathub.json  lv.martinsz.Liftoff.json  meson.build  test-script.sh
data/: lv.martinsz.Liftoff.desktop.in  lv.martinsz.Liftoff.gschema.xml  lv.martinsz.Liftoff.metainfo.xml.in  lv.martinsz.Liftoff.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
publishing/: FLATHUB_SUBMISSION.md  READY_FOR_FLATHUB.md  VERIFICATION_REPORT.md
src/: liftoff-application.c  liftoff-application.h  liftoff-window.c  liftoff-window.h  liftoff-window.ui  liftoff.gresource.xml  main.c  meson.build
